# clay-core

./: .travis.yml  Cargo.toml  README.md
ocl-src/: filter.c  mean.c  pack.c  render.c
ocl-src/filter/: filter.h  identity.h
src/: class.rs  context.rs  lib.rs  ocl_src.rs  push.rs  select.rs  source.rs  store.rs  type_hash.rs
src/buffer/: double_buffer.rs  image.rs  image_buffer.rs  instance_buffer.rs  mod.rs  render_buffer.rs
src/filter/: filter.rs  identity.rs  mod.rs
src/map/: chain.rs  map.rs
src/material/: colored.rs  combine.rs  material.rs  select.rs  test.rs
src/object/: covered.rs  mapper.rs  object.rs  select.rs
src/process/: accumulator.rs  customer.rs  data_builder.rs  filter_kernel.rs  image_maker.rs  kernel.rs  mod.rs  postproc.rs  program.rs  render.rs  renderer.rs  worker.rs
src/scene/: background.rs  mod.rs  scene.rs
src/shape/: bound.rs  mapper.rs  select.rs  shape.rs  target.rs
src/view/: view.rs
