[package]
name = "clay-core"
version = "0.1.2"
authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"

description = "Core functionality for Clay - fast, modular and extendable ray tracer"
homepage = "https://clay-rs.github.io/"
repository = "https://github.com/clay-rs/clay-core"

keywords = ["ray-tracing", "opencl"]
categories = ["graphics", "rendering", "multimedia"]

readme = "README.md"
build = "build.rs"

[dependencies]
ocl = "0.19"
ocl-include = "0.3.3"
nalgebra = "0.18"
rand = "0.7"
lazy_static = "1.3.0"
regex = "1"
image = "0.22.2"

[build-dependencies]
walkdir = "2"
